--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "issues": "https://github.com/sebastianbergmann/dbunit/issues"
     },
     "require": {
-        "php": "^7.1",
-        "phpunit/phpunit": "^8.0",
+        "php": "^7",
+        "phpunit/phpunit": "^8.0 || ^9",
         "symfony/yaml": "^3.0 || ^4.0",
         "ext-pdo": "*",
         "ext-simplexml": "*"
